# axio-bf3-express

./: .gitignore  .gitmodules  README.md  build.sh  meson.build  scan_include.py  scan_src.py
benchmark/: benchmark.md  build.sh
benchmark/atomic_test/: build.sh  mlx5_ifc_dr_match_param_bits.c
benchmark/doca/: run.sh
benchmark/doca/applications/: VERSION  meson.build  meson_options.txt
benchmark/doca/applications/app_shield_agent/: app_shield_agent.c
benchmark/doca/applications/common/: dpdk_utils.c  dpdk_utils.h  flow_parser.c
benchmark/doca/applications/dma_copy/: dma_copy_core.c
benchmark/doca/applications/dpa_all_to_all/: build_device_code.sh  build_dpa_all_to_all.sh  meson.build
benchmark/doca/applications/eth_l2_fwd/: eth_l2_fwd.c  eth_l2_fwd_core.c
benchmark/doca/applications/file_compression/: file_compression.c  file_compression_core.c
benchmark/doca/applications/file_integrity/: file_integrity.c  file_integrity_core.c
benchmark/doca/applications/gpu_packet_processing/: gpu_packet_processing.c
benchmark/doca/applications/ip_frag/: ip_frag.c  ip_frag_dp.c  ip_frag_dp.h  meson.build
benchmark/doca/applications/ipsec_security_gw/: config.c  flow_common.c  flow_common.h  flow_decrypt.c  flow_decrypt.h  flow_encrypt.c  flow_encrypt.h  policy.c  (+4 more)
benchmark/doca/applications/l2_reflector_optimized/: build_flexio_device.sh  l2_reflector_params.json  meson.build
benchmark/doca/applications/l2_reflector_optimized/common/: l2_reflector_common.h
benchmark/doca/applications/l2_reflector_optimized/dependencies/: meson.build
benchmark/doca/applications/l2_reflector_optimized/device/: l2_reflector_optimized_device.c  l2_reflector_optimized_device_bak.c
benchmark/doca/applications/l2_reflector_optimized/host/: l2_reflector_core.h  l2_reflector_optimized_core.c
benchmark/doca/applications/l2_reflector_optimized/src/: meson.build
benchmark/doca/applications/l2_reflector_optimized/src/common/: l2_reflector_common.h
benchmark/doca/applications/l2_reflector_optimized/src/device/: l2_reflector_optimized_device.c
benchmark/doca/applications/l2_reflector_optimized/src/host/: l2_reflector_core.h  l2_reflector_optimized_core.c
benchmark/doca/applications/storage/: meson.build
benchmark/doca/applications/storage/dependencies/: meson.build
benchmark/doca/applications/storage/storage_common/: aligned_new.hpp  buffer_utils.cpp  buffer_utils.hpp  definitions.hpp  doca_utils.cpp  doca_utils.hpp  ip_address.cpp  ip_address.hpp  tcp_socket.hpp
benchmark/doca/applications/storage/zero_copy/: comch_to_rdma_application.cpp  comch_to_rdma_application.hpp  comch_to_rdma_main.cpp  control_message.cpp  initiator_comch_application.cpp  initiator_comch_main.cpp  io_message.hpp  target_rdma_application.cpp  target_rdma_main.cpp
examples/l2_reflector/: build.process  dpa.elf  dpa_bin.asm  dpa_kernel.c  my_riscv.asm
examples/l2_swap/: build.sh  dp_spec.json
examples/l2_swap/src/: dpa_kernel.c
examples/rdma_simple/: build.sh  dp_spec.json
examples/rdma_simple/include/: dpa_kernel.h
examples/rdma_simple/src/: dpa_kernel.c  flow_engine_kernel.c
examples/soc_echo/: dp_spec.json  mat_config.json  user_example.cc  user_example_v2.cc
examples/soc_echo/src/: soc_kernel.cc
examples/udp_echo/: build.sh  dp_spec.json
examples/udp_echo/include/: dpa_kernel.h
examples/udp_echo/src/: dpa_kernel.c
lib/: common.h  meson.build  types.h
lib/channel/: meson.build  nicc_channel.h
lib/channel/include/: channel.h
lib/common/: buffer.h  crc32.h  dpa_queue.h  ethhdr.h  iphdr.h  math_utils.h  meson.build  numautils.h  request_def.h  soc_queue.h  timer.h  ws_hdr.h
lib/common/src/: numautils.cc
lib/dpa/include/: dpa_common.h
lib/libutils/: buffer.h  dpa_queue.h  soc_queue.h  timer.h
lib/log/: meson.build
lib/wrapper/dpa/: build.sh
lib/wrapper/dpa/include/: dpa_wrapper.h
lib/wrapper/dpa/src/: dpa_wrapper.c
lib/wrapper/soc/: meson.build  soc_wrapper.h
lib/wrapper/soc/include/: soc_wrapper.h
lib/wrapper/soc/src/: soc_wrapper.cc
lib/wrapper/soc/src/util/: net_stats.cc  numautils.cc
lib/wrapper/soc/util/: barrier.h  lock_free_queue.h  logger.h  math_utils.h  net_stats.h  rand.h  rule_table.h  timer.h
runtime/: meson.build
runtime/include/: app_context.h  common.h  datapath_pipeline.h  debug.h.in  log.h.in  resource_pool.h
runtime/include/ctrlpath/: README.md  db.h  mat.h  root_table.h  routing.h
runtime/include/ctrlpath/route_impl/: README.md  soc_routing.h
runtime/include/datapath/: channel.h  component.h  component_block.h  dpa.h  flow_engine.h
runtime/include/datapath/block_impl/: __template__.h  dpa.h  dpa_mat.h  flow_engine.h  soc.h
runtime/include/datapath/channel_impl/: dpa_channel.h  soc_channel.h  soc_channel_dpdk_externs.h
runtime/include/resources/: component.h  resource_pool.h
runtime/include/resources/component_impl/: __template__.h  dpa_component.h  flow_engine_component.h  soc_component.h
runtime/include/utils/: app_dag.h  huge_alloc.h  ibv_device.h  mgnt_connection.h  qpinfo.hh  verbs_common.h
runtime/src/: app_context.cc  component_config.cc  datapath_pipeline.cc  main.cc  resource_pool.cc
runtime/src/ctrlpath/: mat.cc  routing.cc
runtime/src/ctrlpath/route_impl/: soc_routing.cc
runtime/src/datapath/: __template__.cc  component_block.cc  datapath_pipeline.cc  dpa.cc  flow_engine.cc
runtime/src/datapath/block_impl/: __template__.cc  dpa.cc  flow_engine.cc  soc.cc
runtime/src/datapath/channel_impl/: dpa_channel.cc  dpa_channel_eth.cc  soc_channel.cc  soc_channel_dpdk_externs.cc
runtime/src/resources/: component.cc  resource_pool.cc
runtime/src/resources/component_impl/: __template__.cc  dpa_component.cc  flow_engine_component.cc  soc_component.cc
runtime/src/utils/: huge_alloc.cc  ibv_device.cc  numautils.cc
src/: main.cpp
test/flow_engine/: flow_entries.json  flow_pipes.json
toolchain/compiler/: meson.build
toolchain/compiler/src/: main.cc
toolchain/loader/: meson.build
toolchain/loader/scripts/: build_dpa_lib.sh
toolchain/loader/src/: main.cc
toolchain/scripts/dpa/: eu_manager.sh
(+363 files in other folders)
